[tool.poetry]
name = "dirty_new"
version = "0.1.0"
description = ""
authors = ["Jefferson Kael Marloch <jefferson.marloch@olist.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
